@@ -48,6 +48,7 @@ Engine fixes:
 * Fixed cooldowns not applying to the base power when using replace_by_effect.
 * Fixed attempt to load default 'male' animations initially, even if they would be replaced by engine/hero_options.txt.
 * Removed 1-frame delay between when the player activates a power and when they change animation state.
+* Fixed replace_by_effect changing the active AI power mid-animation.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
